--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -4,6 +4,7 @@ icon-gap = 25px
 article
   box-shadow 1px 2px 3px #ddd
   background #fff
+  background-image url(/images/background-textured_paper.png)
   &.page
     padding-left 20px
     .icon
