--- a/source/css/_base/layout.styl
+++ b/source/css/_base/layout.styl
@@ -4,6 +4,7 @@
 
 body
   background color-background
+  background-image image-background
   color color-font
   font-family font-default
   font-size 16px
