将layout.styl中background-image变量移至variable.styl

--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -5,6 +5,9 @@ color-meta = #999
 color-border = #ddd
 color-link = #258fb8
 
+// Background
+image-background = url(/images/background.png)
+
 // Font
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
 font-serif = "Georgia", serif
